--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -2,28 +2,30 @@ name: 🤖 Android CI
 
 on:
   push:
-    paths:
-      - 'android-studio/**'
-  pull_request:
+    branches:
+      - main
+    tags:
+      - 'v*.*.*'
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '11'
+          java-version: '17'
 
       - name: Build Debug APK
-        working-directory: android-studio
+        working-directory: android-studio      # ← 수정된 경로
         run: ./gradlew assembleDebug --no-daemon
 
       - name: Upload Debug APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4      # ← v4로 업그레이드
         with:
-          name: app-debug-apk
+          name: debug-apk
           path: android-studio/app/build/outputs/apk/debug/app-debug.apk
