--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -20,12 +20,15 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Grant execute permission to gradlew
+        run: chmod +x android-studio/gradlew
+
       - name: Build Debug APK
-        working-directory: ./      # ← 수정된 경로
-        run: ./gradlew assembleDebug --no-daemon
+        working-directory: ./
+        run: ./android-studio/gradlew assembleDebug --project-dir android-studio --no-daemon
 
       - name: Upload Debug APK
-        uses: actions/upload-artifact@v4      # ← v4로 업그레이드
+        uses: actions/upload-artifact@v4
         with:
           name: debug-apk
           path: android-studio/app/build/outputs/apk/debug/app-debug.apk
