--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -12,28 +12,31 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # 1) Decode keystore
       - name: Decode release keystore
         env:
           ANDROID_KEYSTORE_BASE64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
         run: |
-          echo "$ANDROID_KEYSTORE_BASE64" | base64 -d > release-keystore.jks
+          echo "$ANDROID_KEYSTORE_BASE64" | base64 -d > android-studio/release-keystore.jks
 
-      # 2) Build Release APK
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Grant execute permission to gradlew
+        run: chmod +x android-studio/gradlew
+
       - name: Build Release APK
-        working-directory: ./      # ← 수정된 경로
-        env:
-          ANDROID_KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
-          ANDROID_KEY_ALIAS:       ${{ secrets.ANDROID_KEY_ALIAS }}
-          ANDROID_KEY_PASSWORD:    ${{ secrets.ANDROID_KEY_PASSWORD }}
+        working-directory: ./
         run: |
-          ./gradlew assembleRelease \
-            -Pandroid.injected.signing.store.file=../release-keystore.jks \
-            -Pandroid.injected.signing.store.password=$ANDROID_KEYSTORE_PASSWORD \
-            -Pandroid.injected.signing.key.alias=$ANDROID_KEY_ALIAS \
-            -Pandroid.injected.signing.key.password=$ANDROID_KEY_PASSWORD
+          ./android-studio/gradlew assembleRelease \
+            --project-dir android-studio \
+            -Pandroid.injected.signing.store.file=release-keystore.jks \
+            -Pandroid.injected.signing.store.password=${{ secrets.ANDROID_KEYSTORE_PASSWORD }} \
+            -Pandroid.injected.signing.key.alias=${{ secrets.ANDROID_KEY_ALIAS }} \
+            -Pandroid.injected.signing.key.password=${{ secrets.ANDROID_KEY_PASSWORD }}
 
-      # 3) (선택) GitHub Release 만들고 APK 첨부
       - name: Create GitHub Release
         id: create_release
         uses: softprops/action-gh-release@v1
