--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -12,12 +12,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Decode release keystore
-        env:
-          ANDROID_KEYSTORE_BASE64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
-        run: |
-          echo "$ANDROID_KEYSTORE_BASE64" | base64 -d > android-studio/release-keystore.jks
-
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -27,12 +21,18 @@ jobs:
       - name: Grant execute permission to gradlew
         run: chmod +x android-studio/gradlew
 
+      - name: Decode release keystore
+        env:
+          ANDROID_KEYSTORE_BASE64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
+        run: |
+          echo "$ANDROID_KEYSTORE_BASE64" | base64 -d > release-keystore.jks
+
       - name: Build Release APK
         working-directory: ./
         run: |
           ./android-studio/gradlew assembleRelease \
             --project-dir android-studio \
-            -Pandroid.injected.signing.store.file=release-keystore.jks \
+            -Pandroid.injected.signing.store.file=../release-keystore.jks \
             -Pandroid.injected.signing.store.password=${{ secrets.ANDROID_KEYSTORE_PASSWORD }} \
             -Pandroid.injected.signing.key.alias=${{ secrets.ANDROID_KEY_ALIAS }} \
             -Pandroid.injected.signing.key.password=${{ secrets.ANDROID_KEY_PASSWORD }}
