--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - main
-    tags:
-      - 'v*.*.*'
 
 jobs:
   build:
@@ -20,15 +18,14 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Grant execute permission to gradlew
-        run: chmod +x android-studio/gradlew
+      - name: Grant permission to gradlew
+        run: chmod +x ./gradlew
 
       - name: Build Debug APK
-        working-directory: ./
-        run: ./android-studio/gradlew assembleDebug --project-dir android-studio --no-daemon
+        run: ./gradlew assembleDebug --no-daemon
 
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
         with:
           name: debug-apk
-          path: android-studio/app/build/outputs/apk/debug/app-debug.apk
+          path: app/build/outputs/apk/debug/app-debug.apk
