--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -18,21 +18,18 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Grant execute permission to gradlew
-        run: chmod +x android-studio/gradlew
+      - name: Grant permission to gradlew
+        run: chmod +x ./gradlew
 
       - name: Decode release keystore
         env:
           ANDROID_KEYSTORE_BASE64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
-        run: |
-          echo "$ANDROID_KEYSTORE_BASE64" | base64 -d > release-keystore.jks
+        run: echo "$ANDROID_KEYSTORE_BASE64" | base64 -d > release-keystore.jks
 
       - name: Build Release APK
-        working-directory: ./
         run: |
-          ./android-studio/gradlew assembleRelease \
-            --project-dir android-studio \
-            -Pandroid.injected.signing.store.file=../release-keystore.jks \
+          ./gradlew assembleRelease \
+            -Pandroid.injected.signing.store.file=release-keystore.jks \
             -Pandroid.injected.signing.store.password=${{ secrets.ANDROID_KEYSTORE_PASSWORD }} \
             -Pandroid.injected.signing.key.alias=${{ secrets.ANDROID_KEY_ALIAS }} \
             -Pandroid.injected.signing.key.password=${{ secrets.ANDROID_KEY_PASSWORD }}
@@ -49,6 +46,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: android-studio/app/build/outputs/apk/release/app-release.apk
+          asset_path: app/build/outputs/apk/release/app-release.apk
           asset_name: app-${{ github.ref_name }}.apk
           asset_content_type: application/vnd.android.package-archive
