--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -27,7 +27,9 @@ jobs:
       - name: Decode release keystore
         env:
           ANDROID_KEYSTORE_BASE64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
-        run: echo "$ANDROID_KEYSTORE_BASE64" | base64 -d > app/release-keystore.jks
+        run: |
+          mkdir -p app
+          echo "$ANDROID_KEYSTORE_BASE64" | base64 -d > app/release-keystore.jks
 
       - name: Build Release APK
         run: ./gradlew assembleRelease
