--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -32,6 +32,10 @@ jobs:
           echo "$ANDROID_KEYSTORE_BASE64" | base64 -d > app/release-keystore.jks
 
       - name: Build Release APK
+        env:
+          ANDROID_KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+          ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
+          ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
         run: ./gradlew assembleRelease
 
       - name: Create GitHub Release
