--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -13,7 +13,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -24,7 +25,7 @@ jobs:
       - name: Create dummy local.properties
         run: echo "sdk.dir=$ANDROID_HOME" > local.properties
 
-      - name: Grant permission to gradlew
+      - name: Grant execute permission to gradlew
         run: chmod +x ./gradlew
 
       - name: Decode release keystore
@@ -37,22 +38,24 @@ jobs:
       - name: Build Release APK
         env:
           ANDROID_KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
-          ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
-          ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
+          ANDROID_KEY_ALIAS:       ${{ secrets.ANDROID_KEY_ALIAS }}
+          ANDROID_KEY_PASSWORD:    ${{ secrets.ANDROID_KEY_PASSWORD }}
         run: ./gradlew assembleRelease
 
       - name: Create GitHub Release
         id: create_release
         uses: softprops/action-gh-release@v1
-        with:
-          tag_name: ${{ github.ref_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref_name }}
 
       - name: Upload Release APK
         uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: app/build/outputs/apk/release/app-release.apk
-          asset_name: app-${{ github.ref_name }}.apk
+          upload_url:    ${{ steps.create_release.outputs.upload_url }}
+          asset_path:    app/build/outputs/apk/release/app-release.apk
+          asset_name:    app-${{ github.ref_name }}.apk
           asset_content_type: application/vnd.android.package-archive
